[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/scenes/1/Door_Light.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/1/Background.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/2/bath.png" type="Texture" id=3]
[ext_resource path="res://assets/scenes/1/DustOverlay.png" type="Texture" id=4]
[ext_resource path="res://assets/scenes/1/Floor.png" type="Texture" id=5]
[ext_resource path="res://assets/scenes/2/moveis2.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Bathroom1.gd" type="Script" id=7]
[ext_resource path="res://assets/scenes/2/bath2.png" type="Texture" id=8]
[ext_resource path="res://assets/scenes/1/Wall.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Transition_Scene.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=12]
[ext_resource path="res://assets/items/key.png" type="Texture" id=20]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 1448.2, 1085.05, 456.321, 1082.05, 463.813, 942.708, 1254.92, 1026.61, 1449.7, 1040.1, 1230.95, 945.705 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 3, 4, 0 ), PoolIntArray( 2, 5, 3 ) ]
outlines = [ PoolVector2Array( 463.813, 942.708, 456.321, 1082.05, 1448.2, 1085.05, 1449.7, 1040.1, 1254.92, 1026.61, 1230.95, 945.705 ) ]

[node name="Bathroom1" type="Node"]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 954.44, 546.933 )
mouse_filter = 2
mouse_default_cursor_shape = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area_Move" type="Control" parent="Control"]
anchor_left = 0.234
anchor_top = 0.893
anchor_right = 0.763
anchor_bottom = 1.001
margin_left = -48.28
margin_top = -0.440063
margin_right = -192.96
margin_bottom = 78.9199
rect_scale = Vector2( 1.28, 0.6 )
mouse_default_cursor_shape = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Environment" type="Node" parent="Control"]

[node name="Background" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 2 )
centered = false
flip_h = true
flip_v = true

[node name="bath" type="Sprite" parent="Control/Environment"]
position = Vector2( 614.546, 507.164 )
scale = Vector2( 1.17993, 1 )
texture = ExtResource( 3 )

[node name="Wall" type="Sprite" parent="Control/Environment"]
position = Vector2( -296.376, -1.88779 )
z_index = -1
texture = ExtResource( 9 )
centered = false

[node name="Wall2" type="Sprite" parent="Control/Environment"]
position = Vector2( 398.315, 3.77539 )
z_index = -1
texture = ExtResource( 9 )
centered = false
flip_h = true

[node name="Floor" type="Sprite" parent="Control/Environment"]
position = Vector2( 0, -326.58 )
scale = Vector2( 1, 1.30414 )
z_index = -1
texture = ExtResource( 5 )
centered = false
flip_h = true

[node name="bath2" type="Sprite" parent="Control/Environment"]
position = Vector2( 480.686, 618.811 )
scale = Vector2( 0.850553, 0.986017 )
texture = ExtResource( 8 )

[node name="Box" type="ColorRect" parent="Control/Environment"]
show_behind_parent = true
light_mask = 163913
margin_left = 396.0
margin_right = 1121.0
margin_bottom = 978.0
color = Color( 0.0745098, 0.0745098, 0.0745098, 0.776471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moveis2" type="Sprite" parent="Control/Environment"]
position = Vector2( 562.797, 540.613 )
texture = ExtResource( 6 )

[node name="Size1" type="ColorRect" parent="Control/Environment"]
margin_right = 400.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size2" type="ColorRect" parent="Control/Environment"]
margin_left = 1520.0
margin_right = 1920.0
margin_bottom = 1085.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door_Light" type="Sprite" parent="Control/Environment"]
position = Vector2( 828.143, 326.014 )
rotation = -1.5708
scale = Vector2( 0.785351, 0.685838 )
z_index = 1
texture = ExtResource( 1 )

[node name="Botoes" type="Node" parent="Control"]

[node name="Door" type="TextureButton" parent="Control/Botoes"]
margin_left = 747.0
margin_top = 904.0
margin_right = 1128.0
margin_bottom = 1081.0
hint_tooltip = "Go back to corridor"
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="TextureButton" parent="Control/Botoes"]
margin_left = 1328.02
margin_top = 662.491
margin_right = 1399.02
margin_bottom = 733.491
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Safe" type="TextureButton" parent="Control/Botoes"]
margin_left = 402.0
margin_top = 780.0
margin_right = 842.0
margin_bottom = 967.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation2D" type="Navigation2D" parent="Control"]
position = Vector2( 1.69409, -4.51978 )
z_index = -1
z_as_relative = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Control/Navigation2D"]
z_index = -1
z_as_relative = false
navpoly = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="Control"]
position = Vector2( 1319.2, 1013.98 )
z_index = 5
points = PoolVector2Array( -1317.79, -1013.58 )

[node name="DustOverlay" type="Sprite" parent="."]
position = Vector2( 958.415, 541.945 )
z_index = 2
texture = ExtResource( 4 )
flip_h = true

[node name="Transition_Scene" parent="." instance=ExtResource( 11 )]
[connection signal="pressed" from="Control/Botoes/Door" to="." method="_on_Door_pressed"]
[connection signal="pressed" from="Control/Botoes/Key" to="." method="_on_Key_pressed"]
[connection signal="pressed" from="Control/Botoes/Safe" to="." method="_on_Safe_pressed"]
[connection signal="transitioned" from="Transition_Scene" to="." method="_on_Transition_Scene_transitioned"]
